# goodmetrics

./: LICENSE  README.md  pyproject.toml
goodmetrics/: data.py  order.py  test.ipynb  trader.py
src/goodmetrics/core/: order.py  position.py  type_defs.py
