[tool.poetry]
name = "goodmetrics"
version = "0.1.0"
description = ""
authors = ["Shion Noguchi <shion24stat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
